attempt to fix google maps z-index mobile bug

--- a/public/assets/scss/modules/_main.scss
+++ b/public/assets/scss/modules/_main.scss
@@ -161,16 +161,22 @@ body {
 
     &__carousel {
         opacity: 1;
-        transform: scale(1);
         position: relative;
         z-index: 2;
-        transition: 0.3s opacity ease, 0.3s transform ease;
 
         .is-map & {
             opacity: 0;
-            transform: scale(0.8);
             visibility: none;
             pointer-events: none;
+        }
+
+        @include media($bp_s) {
+            transform: scale(1);
+            transition: 0.3s opacity ease, 0.3s transform ease;
+
+            .is-map & {
+                transform: scale(0.8);
+            }
         }
     }
 
